infrastructure/droneCI/server/drone-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-server-deployment
  labels:
    app: drone-server-deployment
  annotations:
spec:
  selector:
    matchLabels:
      app: drone-server-deployment
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: drone-server-deployment
    spec:
      containers:
      - name: drone-server-deployment
        image: drone/drone:2.0.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 443
