infrastructure/droneCI/server/drone-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-server-deployment
  labels:
    app: drone-server-deployment
spec:
  type: ExternalName
  externalName: drone-server-deployment.drone.svc.cluster.local
  #ports:
  # - protocol: TCP
  #   name: drone
  #   port: 8000
  #   targetPort: 8000
  #   nodePort: 30567
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
  type: NodePort
  selector:
    app: drone-server-deployment
